[tool.poetry]
name = "IOCbin"
version = "0.1.0"
description = "IOC bin is a web server which accepts IOC from Splunk and let's other services such as UBA consume those IOCs."
authors = ["FDSE <fdse@splunk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iocbin = "iocbin.app:main"